<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_gallery"
        android:visible="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_menu_upload"
        android:visible="true"
        android:title="@string/title_share" />

    <item
        android:id="@+id/navigation_user_profile"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:visible="true"
        android:title="@string/title_share" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:visible="true"
        android:title="@string/title_notifications" />

</menu>
